# knockpy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.md  bump-info.json  format.sh  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  bump-version.yml  make-release.yml
docs/: .buildinfo  Makefile  apiref.html  dgp.html  genindex.html  index.html  installation.html  kfilter.html  knockoffsampler.html  kpytorch.html  ksamplers.html  kstats.html  mrcknock.html  mrcknock.ipynb  objects.inv  py-modindex.html  search.html  searchindex.js  smatrix.html  usage.html  usage.ipynb  utilities.html
docs/.doctrees/: apiref.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/.doctrees/api/: knockpy.knockoffs.FXSampler.doctree  knockpy.knockoffs.GaussianSampler.doctree  knockpy.knockoffs.KnockoffSampler.doctree  knockpy.knockoffs.produce_FX_knockoffs.doctree  knockpy.knockoffs.produce_MX_gaussian_knockoffs.doctree
docs/.doctrees/nbsphinx/: usage.ipynb
docs/_images/: inheritance-a745975dcc94f066e35f3c6d1a372bf25465af3a.png.map
docs/_modules/: index.html
docs/_modules/knockpy/: dgp.html  ggm.html  knockoff_filter.html  knockoff_stats.html  knockoffs.html  mac.html  metro.html  mrc.html  smatrix.html  utilities.html
docs/_sources/: apiref.rst.txt  dgp.rst.txt  installation.rst.txt  kfilter.rst.txt  knockoffsampler.rst.txt  ksamplers.rst.txt  mrcknock.ipynb.txt  smatrix.rst.txt  usage.ipynb.txt
docs/_sources/api/: knockpy.knockoffs.GaussianSampler.rst.txt
docs/_static/: documentation_options.js
docs/api/: knockpy.knockoffs.FXSampler.html  knockpy.knockoffs.GaussianSampler.html  knockpy.knockoffs.KnockoffSampler.html  knockpy.knockoffs.produce_FX_knockoffs.html  knockpy.knockoffs.produce_MX_gaussian_knockoffs.html
docs/master/: .buildinfo  apiref.html  genindex.html  index.html  installation.html  mrcknock.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  usage.ipynb
docs/master/.doctrees/: apiref.doctree  environment.pickle  index.doctree  installation.doctree  mrcknock.doctree  usage.doctree
docs/master/_modules/: index.html
docs/master/_sources/: apiref.rst.txt  index.rst.txt  installation.rst.txt  mrcknock.ipynb.txt  usage.ipynb.txt
docs/master/api/: knockpy.knockoffs.FXSampler.html  knockpy.knockoffs.GaussianSampler.html  knockpy.knockoffs.KnockoffSampler.html  knockpy.knockoffs.produce_FX_knockoffs.html  knockpy.knockoffs.produce_MX_gaussian_knockoffs.html
docs/source/: apiref.rst  conf.py  dgp.rst  index.rst  installation.rst  kfilter.rst  kpytorch.rst  ksamplers.rst  kstats.rst  mrcknock.ipynb  smatrix.rst  usage.ipynb
docs/source/api/: knockpy.knockoffs.KnockoffSampler.rst  knockpy.knockoffs.produce_MX_gaussian_knockoffs.rst
docs/v1.0.3/: .buildinfo  apiref.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  usage.html  usage.ipynb
docs/v1.0.3/.doctrees/: apiref.doctree  environment.pickle  index.doctree  (+2 more)
docs/v1.0.4/: .buildinfo  apiref.html  genindex.html  index.html  installation.html  py-modindex.html  search.html  usage.html  usage.ipynb
knockpy/: __init__.py  constants.py  dgp.py  ggm.py  graphs.py  knockoff_filter.py  knockoff_stats.py  knockoffs.py  mac.py  metro.py  mrc.py  smatrix.py  tree_processing.py  utilities.py
knockpy/kpytorch/: __init__.py  deeppink.py  mrcgrad.py
knockpy/mlr/: __init__.py  _mlr_oracle.pyx  _mlr_spikeslab.pyx  _mlr_spikeslab_fx.pyx  _mlr_spikeslab_group.pyx  _mlr_spikeslab_mx.pyx  _update_hparams.pyx  mlr.py
test/: context.py  test_dgp.py  test_ggm.py  test_graphs.py  test_knockoff_filter.py  test_knockoff_stats.py  test_knockoffs.py  test_metro.py  test_mlr.py  test_utils.py  utilities.py
test/test_covs/: README.md  qout16.txt  qout49.txt  qout9.txt  vout16.txt  vout49.txt  vout9.txt
(+72 files in other folders)
