[project]
name = "knockpy"
version = "1.3.2"
authors = [
  {name = "Asher Spector", email = "amspector100@gmail.com"},
]
description = "Knockoffs for variable selection"
readme = "README.md"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.6"
dependencies = [
  "jlc-choldate",
  "cvxpy>=1.0.25",
  "networkx>=2.4",
  "numpy>=1.19.0",
  "scikit_learn>=0.22",
  "scipy>=1.5.2",
  "tqdm>=4.36.1",
]

[project.optional-dependencies]
kpytorch = [
  "torch>=1.4.0",
]
fast = [
  "jlc-scikit-dsdp",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]

[project.urls]
Documentation = "https://amspector100.github.io/knockpy"
Repository = "https://github.com/amspector100/knockpy"
Issues = "https://github.com/amspector100/knockpy/issues"

[dependency-groups]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
  "jlc-scikit-dsdp",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test"]

[build-system]
requires = [
  "cython>=0.29.21",
  "numpy>=1.19.0",
  "setuptools",
  "scipy",
  "wheel",
]

[tool.pytest.ini_options]
rootdir = "."
pythonpath = [
  ".",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "quick: marks tests as fast",
]


[tool.ruff]
exclude = [
  "docs/",
]